--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.0.1",
     "framer-motion": "^10.12.12",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
